# console-rpg

./: CMakeLists.txt  ConsoleRPG.sln  README.md
ConsoleRPG/: Animation.h  Animator.cpp  Animator.h  AnimatorConnection.cpp  AnimatorConnection.h  AnimatorNode.cpp  AnimatorNode.h  AnimatorVariables.cpp  AnimatorVariables.h  Bonus.h  BufferQueueElement.h  ConnectionCondition.h  ConsoleRPG.pro  ConsoleRPG.vcxproj  ConsoleRPG.vcxproj.filters  Containers.h  Damagable.cpp  Damagable.h  Entity.h  EntityAnimated.cpp  EntityAnimated.h  Frame.cpp  Frame.h  GFXE.h  Hitbox.cpp  Hitbox.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Terrain.h  main.cpp
ConsoleRPG/Animator/: Animation.cpp  Animator.cpp  Animator.h  AnimatorConnection.h  AnimatorNode.h  ConnectionCondition.cpp  Frame.h
ConsoleRPG/Entity/: Entity.cpp  EntityAnimated.cpp  EntityAnimated.h  Player.cpp
ConsoleRPG/Files/: idk  pink_tree.txt
ConsoleRPG/Files/Maps/map01/: map01_color_data.txt  map01_hitbox_data.txt
ConsoleRPG/Files/Maps/map02/: map02_color_data.txt  (+2 more)
ConsoleRPG/GFXE/: BufferQueueElement.cpp  BufferQueueElement.h  GFXE.cpp  GFXE.h
ConsoleRPG/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Terrain.cpp  Terrain.h
ConsoleRPG/x64/Debug/: animation.obj.enc  main.new.obj.enc  player.new.obj.enc  vc142.idb
Files/: colors.txt  pink_tree_flipped.txt
Files/Maps/map01/: map01_shadow_data.txt
Files/Maps/test01/: test01_color_data.txt
Files/Player/Idle/: idle_down.txt  idle_left.txt
Files/Player/Running/: running_down.txt  running_right.txt
x64/Debug/: ConsoleRPG.ilk
(+38 files in other folders)
